# HeadsetControlsPC

./: .gitignore  README.md  controller.py  event_dispatcher.py  hex_keycodes.py  pyproject.toml  run.py  settings.json  setup.cfg  setup.py
headset/: __main__.py  controller.py  runner.py
headset_controls/: __main__.py  runner.py
trrsheadset/: __main__.py  controller.py  runner.py
