[metadata]
name = trrsheadset
version = 0.0.1a2
author = PaperStrike
author_email = 1395348685z@gmail.com
description = 为 PC 提供 3.5mm 耳机线控支持
long_description = file: README.md
long_description_content_type = text/markdown
keywords = headset, headset-controls, audio-processing
url = https://github.com/PaperStrike/HeadsetControlsPC
project_urls =
    Bug Tracker = https://github.com/PaperStrike/HeadsetControlsPC/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires =
    sounddevice
    numpy
    keyboard>=0.13.4
python_requires = >=3.6
